<resources>
    <string name="app_name">Hangouts</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="note">Note</string>

    <string name="nothing_to_save">Nothing to save</string>
    <string name="contact_saved">Contact saved</string>
    <string name="add_contact">Add contact</string>
    <string name="edit">Edit</string>
    <string name="contact">Contact</string>
    <string name="no_contacts">There are no contacts yet</string>
    <string name="message">Message&#8230;</string>
    <string name="delete">Delete</string>
    <string name="sure_delete">Are you sure you want to delete this contact?</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="header">Header</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
</resources>